<resources>
    <string name="app_name">桃园</string>
    <string name="app_subtitle">武将百科</string>
    <string name="search_hint">查询</string>
    <string name="menu">菜单</string>
    <string name="main_page">主页</string>
    <string name="wiki_page">百科</string>
    <string name="unlock_page">解锁</string>
    <string name="about_page">关于</string>
    <string name="character_card_belong">所属：</string>
    <string name="developers">开发人员</string>
    <string name="developer_1">朱楚</string>
    <string name="developer_2">周长安</string>
    <string name="developer_3">朱理锋</string>
    <string name="developer_4">郑佳锋</string>
    <string name="license_title">协议</string>
    <string name="license_main"><![CDATA[DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE\nVersion 2, December 2004\n\nCopyright (C) 2004 Sam Hocevar <sam@hocevar.net>\n\nEveryone is permitted to copy and distribute verbatim or modified\ncopies of this license document, and changing it is allowed as long\nas the name is changed.\n\nDO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE\nTERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION\n\n0. You just DO WHAT THE FUCK YOU WANT TO.\n]]></string>
    <string name="startup_poem_1">滚滚长江东逝水</string>
    <string name="startup_poem_2">浪花淘尽英雄</string>
    <string name="startup_poem_3">是非成败转头空</string>
    <string name="startup_poem_4">青山依旧在</string>
    <string name="startup_poem_5">几度夕阳红</string>
    <string name="unlock_rule">你可以选择以下方式解锁更多词条：\n1.点击旋涡达指定次数\n2.点击下方按钮支付</string>
    <string name="saved_unlock_count">saved_unlock_count</string>
    <string name="unlocking">- 正在解锁 -</string>
    <string name="unlocking_poem_1">王濬楼船下益州，金陵王气黯然收</string>
    <string name="unlocking_poem_2">千寻铁锁沉江底，一片降幡出石头</string>
    <string name="unlocking_poem_3">人世几回伤往事，山形依旧枕寒流</string>
    <string name="unlocking_poem_4">今逢四海为家日，故垒萧萧芦荻秋</string>
    <string name="new_unlock">解锁了${n}条新的词条：</string>
    <string name="locked">未解锁</string>
    <string name="hint_name">姓名：</string>
    <string name="hint_belong">归属势力：</string>
    <string name="hint_gender">性别：</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="hint_origin">籍贯：</string>
    <string name="hint_live">生卒：</string>
    <string name="hint_after_from_year">年至</string>
    <string name="hint_after_to_year">年</string>
    <string name="hint_abstract">人物简介</string>
    <string name="hint_history">历史记载</string>
    <string name="search_own">已有查询</string>
    <string name="search_all">百科查询</string>
    <string name="search_own_nores">什么！居然有我没解锁的人物</string>
    <string name="search_all_nores">什么！居然有不在词典的人物</string>
</resources>
