<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zyuco.peachgarden.StartupActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="80sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/app_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_subtitle"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/app_name"/>

    <TextView
        android:id="@+id/startup_poem_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="30dp"
        android:ems="1"
        android:text="@string/startup_poem_1"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/startup_poem_2"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/startup_poem_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="1"
        android:text="@string/startup_poem_2"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/startup_poem_1"/>

    <TextView
        android:id="@+id/startup_poem_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:ems="1"
        android:text="@string/startup_poem_3"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/startup_poem_1"
        app:layout_constraintTop_toTopOf="@id/startup_poem_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:ems="1"
        android:text="@string/startup_poem_4"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/startup_poem_1"
        app:layout_constraintTop_toBottomOf="@id/startup_poem_3"/>

    <TextView
        android:id="@+id/startup_poem_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:ems="1"
        android:text="@string/startup_poem_4"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/startup_poem_3"
        app:layout_constraintTop_toTopOf="@id/startup_poem_3"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:src="@mipmap/startup_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/startup_poem_3"
        app:layout_constraintTop_toBottomOf="@id/startup_poem_5"/>

</android.support.constraint.ConstraintLayout>
