<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/edit_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/detail_man_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.zyuco.peachgarden.DetailActivity">
        <ImageView
            android:id="@+id/edit_avatar_background"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_marginTop="70dp"
            android:src="@mipmap/avatar_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/edit_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="36dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/edit_avatar_background"/>

        <TextView
            android:id="@+id/edit_hint_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_name"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/edit_name"
            app:layout_constraintTop_toBottomOf="@id/edit_avatar_background"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:maxLength="10"
            app:layout_constraintTop_toTopOf="@id/edit_hint_name"
            app:layout_constraintBottom_toBottomOf="@id/edit_hint_name"
            app:layout_constraintLeft_toRightOf="@id/edit_hint_name"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/edit_hint_belong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:text="@string/hint_belong"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name"/>

        <EditText
            android:id="@+id/edit_belong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20sp"
            android:minWidth="40dp"
            app:layout_constraintTop_toTopOf="@id/edit_hint_belong"
            app:layout_constraintBottom_toBottomOf="@id/edit_hint_belong"
            app:layout_constraintLeft_toRightOf="@id/edit_hint_belong"
            />

        <TextView
            android:id="@+id/edit_hint_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/hint_gender"
            app:layout_constraintRight_toLeftOf="@id/edit_gender"
            app:layout_constraintTop_toTopOf="@id/edit_gender"
            app:layout_constraintBottom_toBottomOf="@id/edit_gender"
            />

        <RadioGroup
            android:id="@+id/edit_gender"
            android:checkedButton="@id/edit_gender_male"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/edit_hint_belong"
            app:layout_constraintBottom_toBottomOf="@id/edit_hint_belong"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="20dp"
            >
            <RadioButton
                android:id="@+id/edit_gender_male"
                android:text="@string/gender_male"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/edit_gender_female"
                android:text="@string/gender_female"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:id="@+id/edit_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/hint_origin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_hint_belong"/>
        <EditText
            android:id="@+id/edit_origin_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_origin"/>

        <TextView
            android:id="@+id/edit_live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:layout_marginStart="20dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/hint_live"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_origin_input"/>
        <EditText
            android:id="@+id/edit_live_from"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:maxLength="4"
            android:inputType="number"
            app:layout_constraintLeft_toRightOf="@+id/edit_live"
            app:layout_constraintTop_toBottomOf="@id/edit_origin_input"/>
        <TextView
            android:id="@+id/edit_from_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/hint_after_from_year"
            app:layout_constraintLeft_toRightOf="@+id/edit_live_from"
            app:layout_constraintTop_toBottomOf="@id/edit_origin_input"/>
        <EditText
            android:id="@+id/edit_live_to"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:theme="@style/MyEditText"
            android:maxLength="4"
            android:inputType="number"
            app:layout_constraintLeft_toRightOf="@+id/edit_from_year"
            android:textCursorDrawable="@null"
            app:layout_constraintTop_toBottomOf="@id/edit_origin_input"/>
        <TextView
            android:id="@+id/edit_to_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/hint_after_to_year"
            app:layout_constraintLeft_toRightOf="@+id/edit_live_to"
            app:layout_constraintTop_toBottomOf="@id/edit_origin_input"/>

        <TextView
            android:id="@+id/edit_hint_abstract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/hint_abstract"
            android:textColor="#000"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_live"/>

        <EditText
            android:id="@+id/edit_abstract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_hint_abstract"/>
        <TextView
            android:id="@+id/edit_hint_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/hint_history"
            android:textColor="#000"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_abstract"/>

        <EditText
            android:id="@+id/edit_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_hint_history"/>
        <ImageButton
            android:id="@+id/edit_save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/save"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_history"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>